Test BeanParam
Bug pour le moment à voir
